# NESolver

./: .gitignore  CMakeLists.txt  Nash_2Player_NF.cpp  Nash_2Player_NF.h  README.md  a  cmake_install.cmake  cp_payoffs.csv  index.md  install_eigen.sh  main.cpp  rp_payoffs.csv  test_matrix.csv
